$Id$

2020-11-23  Christian Franke  <franke@computer.org>

	smartd.cpp: Allow to specify a delay limit for staggered self-tests.
	smartd.conf.5.in: Document new functionality.

2020-11-21  Christian Franke  <franke@computer.org>

	smartd.cpp: Add staggered self-tests (#310).
	smartd.conf.5.in: Document new functionality.

2020-11-17  Dmitriy Potapov <atomsk+oss@google.com>

	smartd.cpp: Don't write attrlog when device is skipped due to idle or
	standby mode, or if attributes were not read for any other reason
	(GH pull/75).

2020-11-09  Christian Franke  <franke@computer.org>

	smartd.cpp: Resolve symlinks before device names are checked for
	duplicates (#1390).
	dev_interface.cpp, dev_interface.h: Add 'get_unique_dev_name()'
	and 'is_raid_dev_type()' to support platform specific modifications.
	smartd.conf.5.in: Document new functionality.

2020-11-07  Christian Franke  <franke@computer.org>

	json.cpp, json.h: Add YAML support.
	smartctl.cpp: Add '--json=y' option.
	smartctl.8.in: Document new option.

	smartctl.8.in, smartd.conf.5.in: Remove EXPERIMENTAL notes for
	features added before 7.0.
	update-smart-drivedb.8.in: Add missing EXPERIMENTAL note.

2020-11-01  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Phison Driven SSDs: KINGSTON OM4P0S3* (#1374), OMSP0S3* (#1375).
	- InnoDisk iCF 9000 / 1SE2 Cards: Rename entry. Add 1SE2 H (#1351).
	- Marvell based SanDisk SSDs: 2TB SDSSDH3 (GH issues/67, GH pull/69),
	  WD Blue SSD WDS100T2B0A (#1378).
	- SanDisk based SSDs: SDSA6GM*.
	- Toshiba 2.5" HDD MK..76GSX/GS001A (GH pull/58).
	- Toshiba L200 (CMR), Toshiba L200 (SMR) (#1228, patch from #1377).
	- Western Digital Blue: Apple OEM (#1385).
	- Western Digital Scorpio Blue Serial ATA: 320 GB (patch from #888).

	os_win32.cpp: Decode Windows 10 20H2 and Server 2004, 20H2
	build numbers.

2020-10-29  Alex Samorukov  <samm@os2.kiev.ua>

	os_freebsd.cpp: skip SCSI subenclosure devices on scan (#1299)

2020-10-24  Christian Franke  <franke@computer.org>
